--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    buildFeatures{
+        dataBinding true
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
